  * Do not install gtk libs in libgail-dev.
  * Rework docs installation.
  * Add doc links where needed.
  * Install .devhelp files at the correct places. Closes: #504807.
  * Bump dependencies for the development package.
  * Fix dependencies of gail packages.
  * Don’t install libgail in the udeb.
  * Stop shipping /usr/lib/pkgconfig/libgtk-directfb-2.0-0/, nobody uses 
    it.

 -- Josselin Mouette <joss@debian.org>  Tue, 11 Nov 2008 14:44:21 +0100

gtk+2.0 (2.14.4-2) experimental; urgency=low

  * debian/control, debian/rules, debian/libgail*:
  - split libgail packages

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 05 Nov 2008 14:54:08 -0200

gtk+2.0 (2.14.4-1) experimental; urgency=low

  [ Gustavo Noronha Silva ]
  * New upstream release
  * debian/patches/006_proper-directfb-modules.patch:
  - refreshed
  * debian/patches/008_implicit_pointer_conversion_gdkgc_directfb.patch,
    debian/patches/009_gtk-export-filechooser.patch,
    debian/patches/020_immodules-files-d.patch,
    debian/patches/021_loader-files-d.patch,
  - update borrowed from Ubuntu's package
  * debian/patches/071_correct_directfb_declarations.patch,
    debian/patches/072_workaround_directfb_build.patch:
  - borrowed from ubuntu
  * debian/patches/033_treeview_resizing.patch,
    debian/patches/095_gtk-im-module-setting.patch:
  - removed; fixed upstream
  * debian/patches/070_mandatory-relibtoolize.patch:
  - refreshed
  * debian/control.in:
  - added libjasper-dev to the Build-Depends, as GTK+ now supports
    JPEG2000
  - make GTK+ packages conflict/replace with gail ones, since they are now
    included in GTK+
  * debian/patches/092_fix_printtest_include.patch:
  - new patch, to fix build problem in print test
  * debian/patches/071_jasper_link_fix.patch:
  - make gdk-pixbuf-csource link correctly with libjasper
  * debian/rules, debian/control:
  - newer libcairo2-dev contains everything needed to build the directfb