@@ -52,7 +52,6 @@ Conflicts: libgtk2.0-0png3,
            gimp1.3 (<< 1.3.7-1.1),
            metatheme (<< 0.9.7-3),
            libgnomeui-0 (<= 2.14.1-3),
-           libgail18 (<< 2.14.4),
            gtk2.0-examples (<< 2.2.0),
            libgdkxft0,
            openoffice.org-core (<< 2.2.1-8),
@@ -208,8 +207,7 @@ Recommends: python (>= 2.4),
 Suggests: @DOC_PKG@
 Replaces: libgtk1.3-dev,
           gtk2-engines-pixbuf (<< 2.8.18-5)
-Conflicts: libgtk1.3-dev,
-           libgail-dev (<< 2.14.4)
+Conflicts: libgtk1.3-dev
 Description: Development files for the GTK+ library
  The GTK+ is a multi-platform toolkit for creating graphical user
  interfaces. Offering a complete set of widgets, the GTK+ is suitable
@@ -245,8 +243,7 @@ Architecture: any
 Depends: @SHARED_PKG@ (= ${binary:Version}),
          @COMMON_PKG@,
          ${misc:Depends}
-Conflicts: libgtk2.0-dbg,
-           libgail-dbg (<< 2.14.4)
+Conflicts: libgtk2.0-dbg
 Replaces: libgtk2.0-dbg
 Description: The GTK+ libraries and debugging symbols
  The GTK+ is a multi-platform toolkit for creating graphical user
@@ -264,8 +261,7 @@ Architecture: all
 Depends: lynx | www-browser,
          ${misc:Depends}
 Replaces: libgtk1.3-doc
-Conflicts: libgtk1.3-doc,
-           libgail-common (<< 2.14.4)
+Conflicts: libgtk1.3-doc
 Recommends: libglib2.0-doc,
             libatk1.0-doc,
             libpango1.0-doc
