@@ -1,1 +1,0 @@
-libgailutil 18 libgail18 (>= 1.10.1), libgail-common (>= 1.10.1)
